--- a/app/src/main/res/layout/activity_prepare_payment.xml
+++ b/app/src/main/res/layout/activity_prepare_payment.xml
@@ -243,18 +243,12 @@
 
     </LinearLayout>
 
-    <Button
+    <android.support.v7.widget.AppCompatButton
         android:id="@+id/btnVerify"
-        style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:backgroundTint="@color/colorPrimary"
-        android:fontFamily="@font/raleway_r"
-        android:includeFontPadding="false"
+        style="@style/AppTheme.RoundedCornerMaterialButton"
+        android:layout_width="match_parent"
+        android:layout_marginBottom="16dp"
         android:text="@string/verify"
-        android:textColor="@color/white"
-        android:textSize="@dimen/text_size_large"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
