--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,4 +24,7 @@
     <dimen name="text_size_large">24sp</dimen>
     <dimen name="text_size_pin">32sp</dimen>
 
+    <dimen name="size_qr_image">220dp</dimen>
+    <dimen name="size_explore_image">30dp</dimen>
+
 </resources>
