--- a/app/src/main/res/layout/fr_loaded_wallet.xml
+++ b/app/src/main/res/layout/fr_loaded_wallet.xml
@@ -29,24 +29,12 @@
             android:layout_height="match_parent">
 
             <LinearLayout
+                android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="false"
                 android:background="@color/white"
-                android:orientation="vertical"
-                android:paddingLeft="0dp"
-                android:paddingRight="0dp">
-
-                <TextView
-                    android:id="@+id/tvHeader"
-                    android:layout_width="match_parent"
-                    android:layout_height="35dp"
-                    android:fontFamily="@font/raleway_r"
-                    android:paddingTop="8dp"
-                    android:text="@string/banknote"
-                    android:textAlignment="center"
-                    android:textColor="@color/primary_dark"
-                    android:textSize="@dimen/text_size_medium"/>
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/tvCaution"
@@ -59,6 +47,36 @@
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textSize="@dimen/text_size_1_small"/>
+
+                <ImageView
+                    android:id="@+id/ivTangemCard"
+                    android:layout_width="325dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/tangem_card_2"
+                    />
+
+                <ImageView
+                    android:visibility="gone"
+                    android:id="@+id/imgBlockchain"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:src="@drawable/tangem_logo_small_new"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+
+                <TextView
+                    android:visibility="gone"
+                    android:id="@+id/tvHeader"
+                    android:layout_width="match_parent"
+                    android:layout_height="35dp"
+                    android:fontFamily="@font/raleway_r"
+                    android:paddingTop="8dp"
+                    android:text="@string/banknote"
+                    android:textAlignment="center"
+                    android:textColor="@color/primary_dark"
+                    android:textSize="@dimen/text_size_medium"/>
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
@@ -99,14 +117,7 @@
                         app:layout_constraintTop_toTopOf="parent"
                         tools:text="0 mBTC"/>
 
-                    <ImageView
-                        android:id="@+id/imgBlockchain"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:src="@drawable/tangem_logo_small_new"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"/>
+
 
                 </android.support.constraint.ConstraintLayout>
 
@@ -160,7 +171,8 @@
                     android:layout_marginTop="4dp"
                     android:orientation="horizontal"
                     android:paddingLeft="8dp"
-                    android:paddingRight="8dp">
+                    android:paddingRight="8dp"
+                    android:visibility="gone">
 
                     <TextView
                         android:layout_width="110dp"
@@ -177,6 +189,8 @@
                         android:textColor="@color/primary_dark"
                         android:textStyle="normal|bold"
                         tools:text="Bitcoin"/>
+
+
                 </LinearLayout>
 
                 <LinearLayout
